--- a/02_OutputWithAlertAndLog/Solution/index.html
+++ b/02_OutputWithAlertAndLog/Solution/index.html
@@ -2,11 +2,18 @@
 <html>
 <head>
   <title>JS Atomic 02</title>
-  <script src="global.js"></script>
+  <script type="text/javascript" src="global.js"></script>
 </head>
 <body>
   <h1>JS Atomic 02</h1>
   <h2>What's the difference between alert() and console.log()?</h2>
-  <p>Put your answer here, then keep going</p>
+  <p>Alert pops up an alert box in front of the screen which you have to click "OK" to make go away. Console.log is just like "puts" -- it puts a line of text on the screen.</p>
+
+  <h2>What's one situation where you might use an `alert()` to tell the user something?</h2>
+  <p>If someone's time-limited login session was about to expire due to inactivity on the page.</p>
+
+  <h2>What's one way that `alert()` might get obnoxious?</h2>
+  <p>It's obnoxious because you can't do anything else on the page until you click OK and make it go away.</p>
 </body>
 </html>
+
