Done up through 4

--- a/04_GettingInputWithPrompt/index.html
+++ b/04_GettingInputWithPrompt/index.html
@@ -7,5 +7,43 @@
 <body>
   <h1>JS Atomic 04</h1>
   <!-- Answer the questions above here -->
+  <h1>1. What is the data-type (e.g. string or integer) of the information that comes in? What happens if the user inputs a number -- does it stay an integer? Use `typeof` and `console.log()` to help with this.</h1>
+  <p>
+  The information is all turned into string.
+  </p>
+  <h1>2. What happens if the user clicks "OK" (or equivalent) without typing anything in? What information gets assigned to a variable, if any?</h1>
+  <p>
+  The program continues with no information. EX: It will just display "Your name is ."
+  </p>
+  <h1>
+  3. How did you choose your variable names? If you gave a list of variable names to someone who hasn't seen your code, could they reasonably predict what information you might store in each?
+  </h1>
+  <p>
+  I just chose my variable names based on the information we were trying to get to keep it simple. I think anyone could easily discern what each variable was for.
+  </p>
+  <h1>
+  4. If you completely changed a question you were asking the user, would it make sense to totally rename the variable? What if you changed the order of your questions?
+  </h1>
+  <p>
+  It would depend on what the new question was asking. If you change the order of the questions you don't have to change anything. It will still organize things the correct way.
+  </p>
+  <h1>
+  5. In these exercises, we use `prompt()` to collect information, but most websites do that ask for information do not use `prompt()` -- how do they collect information (what HTML elements do they use)? What might be an advantage to doing it that way instead of with `prompt()`? Are there any disadvantages? Why might you use `prompt()`?
+  </h1>
+  <p>
+  Cookies might be the better route to store information. It seems like most websites would use that to keep information.
+  </p>
+  <h1>
+  6. Research `prompt()` -- is there any way to make it so that there are two (or more) fields?
+  </h1>
+  <p>
+  From what I could find, it looks as though without the help of JQuery, you cannot have multiple fields for prompt.
+  </p>
+  <h1>
+  7. What questions do you have?
+  </h1>
+  <p>
+  None at this moment. Seems pretty straightforward.
+  </p>
 </body>
 </html>
