answered my own question in exercise 3

--- a/03_Variables/index.html
+++ b/03_Variables/index.html
@@ -20,7 +20,11 @@ However, I wasn't trying to force that variable to interact with another variabl
 <p> I was looking into how to get variables to nest in strings like we did in Ruby. ( "I AN EXAMPLE #{VAR}" )
 I looked to the internet. The general response was that it previously wasn't possible in older browsers. However, people were saying that it now should be possible
 when using formats like 'THIS IS ANOTHER ${example}'.
-...But it  still didn't seem to work for me. I then tried looking into if the functionality just didn't work with alerts or even stringONstring business, but wasn't able to find anything absolutely concrete on the topic. </p>
+...But it  still didn't seem to work for me. I then tried looking into if the functionality just didn't work with alerts or even stringONstring business, but wasn't able to find anything absolutely concrete on the topic.</p>
+
+
+<p>Okay. I lied. I found the answer. I was using ' not `. </p>
+<p><img src="https://media.giphy.com/media/CvJshblafCq1q/giphy.gif">  </p>
 
 </body>
 </html>
