--- a/04_GettingInputWithPrompt/index.html
+++ b/04_GettingInputWithPrompt/index.html
@@ -7,25 +7,25 @@
 <body>
   <h1>JS Atomic 04</h1>
   <h2>What is the data-type (e.g. string or integer) of the information that comes in? What happens if the user inputs a number -- does it stay an integer? Use typeof and console.log() to help with this</h2>
-  <p></p>
+  <p>According to console.log, all of the user's input is returnded as a string, even if they type in a number.</p>
 
   <h2>What happens if the user clicks "OK" (or equivalent) without typing anything in? What information gets assigned to a variable, if any?</h2>
-  <p></p>
+  <p>It looks like the variable is assigned an empty string. Nothing is displaed for the variable in the alert, but the console log shows the variable still has data type string.</p>
 
   <h2>How did you choose your variable names? If you gave a list of variable names to someone who hasn't seen your code, could they reasonably predict what information you might store in each?</h2>
-  <p></p>
+  <p>I believe someone would be able to understand my variables, it may take a little work on the other persons part to read some context from the surrounding code. I could have made my variables more clear by saying user_name instead of name. But in my opinion that is just more unecessary typing which means more unecessary room for typos.</p>
 
   <h2>If you completely changed a question you were asking the user, would it make sense to totally rename the variable? What if you changed the order of your questions?</h2>
-  <p></p>
+  <p>If I reworded a question, or re-arranged the questions but the desired information stayed the same. Then I probably wouldn't rename the variable. But if the question changed completely like instead of asking for favorite number I asked for favorite animal then I would change the variable name.</p>
 
   <h2>In these exercises, we use prompt() to collect information, but most websites do that ask for information do not use prompt() -- how do they collect information (what HTML elements do they use)? What might be an advantage to doing it that way instead of with prompt()? Are there any disadvantages? Why might you use prompt()?</h2>
-  <p></p>
+  <p>Up until now, I've been getting information from users via html forms, which appears to be a very comon approach for most internet sites. This could be advantageous because the form can exist on the page without an obnoxious alert jumping in before the view load. A user can also see all of the form fields this way. Prompts could be useful for getting one crucial piece of information first before allowing the user to move on.</p>
 
   <h2>Research prompt() -- is there any way to make it so that there are two (or more) fields?</h2>
-  <p></p>
+  <p>It appears that prompt() by itself can only have 1 field. It does look like however, that you could make you own custom popup window that might accomplish the same thing. </p>
 
   <h2>Questions that I have.</h2>
-  <p></p>
+  <p>Prompts seem like a very effective way to get important information from a user quickly, and I remember seeing them more frequently in the ye olde days of the internet. Are they becoming less frequently used now?</p>
 
 </body>
 </html>
