--- a/01_Intro_To_JS/index.html
+++ b/01_Intro_To_JS/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="global.css">
 
   <!-- Now use the <script> tag to include the javascript in ttt.js -->
+  <script type="text/javascript" src="global.js"></script>
 
 </head>
 
