Atomic 04 Questions WIP

--- a/04_GettingInputWithPrompt/index.html
+++ b/04_GettingInputWithPrompt/index.html
@@ -10,20 +10,20 @@
   <p> </p>
 
   <h2>What happens if the user clicks "OK" (or equivalent) without typing anything in? What information gets assigned to a variable, if any?</h2>
-  <p> </p>
+  <p>Nothing gets assigned to the variable and the alerts say something like "Your name is ." Likewise, the console log shows statements without variables at the end.</p>
 
   <h2>How did you choose your variable names? If you gave a list of variable names to someone who hasn't seen your code, could they reasonably predict what information you might store in each?</h2>
-  <p> </p>
+  <p>I started them all with "user" because that's where the information is coming from. I think that anybody could guess what kind of information they would contain.</p>
 
   <h2>If you completely changed a question you were asking the user, would it make sense to totally rename the variable? What if you changed the order of your questions?</h2>
-  <p> </p>
+  <p>If I totally changed the question, yes, in the interest of having clear, maintainable code, I would change the variable name, as well. The order shouldn't matter.</p>
 
   <h2>In these exercises, we use prompt() to collect information, but most websites do that ask for information do not use prompt() -- how do they collect information (what HTML elements do they use)? What might be an advantage to doing it that way instead of with prompt()? Are there any disadvantages? Why might you use prompt()?</h2>
-  <p> </p>
+  <p>Websites generall use HTML forms to collection information from users. It's advantageous because a user can look back and see how they've answered other things, and even change answers before submitting. You can't get a prompt back. I'm not sure why I would use prompt. I guess to ask for an email address to get someone to sign up for a mailing list when they visit a site. Something like that where you only need a single piece of information.</p>
 
   <h2>Research prompt() -- is there any way to make it so that there are two (or more) fields?</h2>
-  <p> </p>
-  
+  <p>From what I've read, you can't do this without relying on things outside of JS.</p>
+
   <h2>What questions do you have?</h2>
   <p> </p>
 
