--- a/04_GettingInputWithPrompt/index.html
+++ b/04_GettingInputWithPrompt/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>JS Atomic 04</h1>
   <h2>What is the data-type (e.g. string or integer) of the information that comes in? What happens if the user inputs a number -- does it stay an integer? Use typeof and console.log() to help with this.</h2>
-  <p> </p>
+  <p>The data type that comes in from a prompt is always a string, but parseInt() and parseFloat() can be used to convert back to numeric values in the case of number inputs.</p>
 
   <h2>What happens if the user clicks "OK" (or equivalent) without typing anything in? What information gets assigned to a variable, if any?</h2>
   <p>Nothing gets assigned to the variable and the alerts say something like "Your name is ." Likewise, the console log shows statements without variables at the end.</p>
@@ -19,13 +19,13 @@
   <p>If I totally changed the question, yes, in the interest of having clear, maintainable code, I would change the variable name, as well. The order shouldn't matter.</p>
 
   <h2>In these exercises, we use prompt() to collect information, but most websites do that ask for information do not use prompt() -- how do they collect information (what HTML elements do they use)? What might be an advantage to doing it that way instead of with prompt()? Are there any disadvantages? Why might you use prompt()?</h2>
-  <p>Websites generall use HTML forms to collection information from users. It's advantageous because a user can look back and see how they've answered other things, and even change answers before submitting. You can't get a prompt back. I'm not sure why I would use prompt. I guess to ask for an email address to get someone to sign up for a mailing list when they visit a site. Something like that where you only need a single piece of information.</p>
+  <p>Websites generally use HTML (I think?) forms (some kind of forms...) to collect information from users. It's advantageous because a user can look back and see how they've answered other things, and even change answers before submitting. You can't get a prompt back. I'm not sure why I would use prompt. I guess to ask for an email address to get someone to sign up for a mailing list when they visit a site. Something like that where you only need a single piece of information.</p>
 
   <h2>Research prompt() -- is there any way to make it so that there are two (or more) fields?</h2>
   <p>From what I've read, you can't do this without relying on things outside of JS.</p>
 
   <h2>What questions do you have?</h2>
-  <p> </p>
+  <p>None, I think?</p>
 
 </body>
 </html>
