--- a/06_IfStatements/index.html
+++ b/06_IfStatements/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>JS Atomic 03</title>
-  <script type="text/javascript" src="guess_num.js"></script>
+  <script type="text/javascript" src="drivers.js"></script>
 
 </head>
 <body>
@@ -36,6 +36,16 @@
   <h3>In this case, does it make more sense to leave the user's guess as a string, or to convert it to an integer? Why? What are the relative advantages / disadvantages of each approach (particularly in terms of the types of new features that might be able to be added)?</h3>
   <p>I'd say using the "===" because it seems like it would be more fool proof as the program grew.</p>
 
+  <h3>Does it matter what order your if-statements are in?</h3>
+  <p>Yes. The program goes from top to bottom through the code</p>
+
+  <h3>When testing ranges, did you use &&, ||, or something else entirely (e.g. nested if-statements)? If you used &&, why is that a better choice than || (and vice-versa)?</h3>
+  <p>I didn't use either. I just used >= and <= .</p>
+
+  <h3>What types of input produce a value of NaN after parsing? Is it important to check for NaN values? Is it possible for a NaN value to trigger any of the other if-statements? If so, how and why?</h3>
+  <p></p>
+  
+  What questions do you have?
 
   <!-- Answer the 3 questions above here -->
 </body>
