Chugging away at exercises. Trying to become inspired. Finding this tedious. Just finished exercise #3.

--- a/02_OutputWithAlertAndLog/index.html
+++ b/02_OutputWithAlertAndLog/index.html
@@ -9,15 +9,31 @@
   <h1>JS Atomic 02</h1>
   
   <h2>What's the difference between alert() and console.log()?</h2>
-  <p>Put your answer here, then keep going</p>
+  <p><ul>
+      <li>alert() creates an alert message in a dialog box.</li>
+      <li>console.log() displays data on the browser's Javascript console.</li>
+    </ul>
+  </p>
   
   <h2>What's one situation where you might use an `alert()` to tell the user something?</h2>
-  <p>Put your answer here, then keep going</p>
-  <p>Maybe you'll have a couple paragraphs for an answer?</p>
+  <p>You might warn a user that the link they have clicked will navigate them away from the page they are on without saving some changes they have made.</p>
+  <p>You could also warn a user if they are about to do something that may have unintended consequences, like deleting something from a database that will delete other data.</p>
+
+  <p>Or, you could alert a user that if they navigate away from a page they will miss out on the spectacular deals and bargains available to them on that page!!! Only $19.99!!</p>
+
   
   <h2>What's one way that `alert()` might get obnoxious?</h2>
-  <p>Put your answer here, then keep going</p>
+  <p>You have to click okay in order to proceed, so it halts the delivery of the information you have requested.</p>
   
+
+  <h2>Would it make sense to use `console.log()` to tell the user things? Why or why not?</h2>
+  <p>No. Users generally won't know how to open the Javascript console. And it certainly isn't something that users should be expected to do in order to interact with a web page.</p>
+
+
+  <h2>What's one way that `console.log()` might be a good tool for you to use?</h2>
+  <p>You could add notes to yourself as you code, possibly as a debugging tool of sorts.</p>
+6. When do the `console.log()` statements get run? Is it before the first `alert()` gets displayed? After it gets displayed but before the user clicks "OK" (or equivalent)? After the user clicks to close the dialog box? A different time? How did you find out for sure?
+7. What questions do you have?
   <!-- etc. -->
 </body>
 </html>
