--- a/06_IfStatements/index.html
+++ b/06_IfStatements/index.html
@@ -1,8 +1,8 @@
 <!doctype HTML>   
 <html>
 <head>
-  <title>JS Atomic 03</title>
-  <script type="text/javascript" src="drivers.js"></script>
+  <title>JS Atomic 06</title>
+  <script type="text/javascript" src="drivers_two.js"></script>
 
 </head>
 <body>
