Removed commenting for the other scripts.

--- a/06_IfStatements/index.html
+++ b/06_IfStatements/index.html
@@ -3,9 +3,9 @@
 <head>
   <title>JS Atomic 06</title>
   <script src="triangle.js"></script>
-  <!-- <script src="age.js"></script> --> -->
-  <!-- <script src="password.js"></script> -->
-  <!-- <script src="number.js"></script>  -->
+  <script src="age.js"></script> -->
+  <script src="password.js"></script>
+  <script src="number.js"></script> 
 </head>
 <body>
   <h1>JS Atomic 06</h1>
