--- a/06_IfStatements/index.html
+++ b/06_IfStatements/index.html
@@ -41,3 +41,11 @@
   <h2>Does it matter if the user-provided password matches your password exactly, or is there some flexibility allowed in capitalization? Did you use `=` or `==` or `===` to compare passwords (or something else)? Why? Would any of the others work? Why is it a bad idea to store a password (or other sensitive information) in plain text in a Javascript file?</h2>
   <p>My password is case-sensitive, although I bet there are ways to work around that. I used === but tested with == and it seemed to work just as well. You can't use just = because that resets the password and will accept literally anything.</p>
   <p>Sumeet said Javascript is also PUBLIC, so if a sensitive password were stored in Javascript, someone could just view the page source and have access to that information.</p>
+  <h1>JS Atomic 06.C Secret Numbers</h1>
+  <h2>- If you collect the user's input as a string (i.e. without using `parseInt()` to turn it into an integer), does `==` work to compare the input to the stored secret number? Would `===` work? Which is best?</h2>
+  <p>If you don't use parseInt(), you can't use === or it won't recognize the input. == can see if a string contains just that integer. === can't. (=== is more accurate, though, and faster)</p>
+  <h2>If you collect the user's input as an integer (i.e. by using `parseInt()` to turn it into an integer), can you use `==` to compare? `===`? Which is better in this case?</h2>
+  <p>If you use parseInt() then you can use either == or ===, since it can read both. It will also register if they type their guess the way they would say their guess, like "23?"</p>
+  <h2>WHAT'S THE DIFFERENCE BETWEEN == AND ===</h2>
+  <p>From what I understand, === is faster and more accurate. === requires everything to be EXACTLY the same or else it rejects it. == will convert things being compared into the same TYPE first (which is why == can read "5" as 5) and while this could be useful, everyone on the internet seems to advise against it.</p>
+
