--- a/06_IfStatements/index.html
+++ b/06_IfStatements/index.html
@@ -45,7 +45,22 @@
   <h3>What types of input produce a value of NaN after parsing? Is it important to check for NaN values? Is it possible for a NaN value to trigger any of the other if-statements? If so, how and why?</h3>
   <p></p>
   
-  What questions do you have?
+  <h3>Does it matter what order your if / else if statements happen? If you reorder them, does your program still produce correct output?</h3>
+  <p>The conditional still works.</p>
+  
+  <h3>What's wrong with this conditional: if (age < 16 && age > 21)?</h3>
+  
+  <h3>Let's say that your program needs to be easy to modify so that it works in parts of the country/world where the age ranges are different. How would you replace the numbers in your if statements with variables to make the program make sense? Or is it easier to just have the numbers be there? Does it matter?</h3>
+  <p> Seems better to store the valid age range in a variable like "validDriver" or "validDrinker" and then country by country you could set the varabile to what is appropriate  </p>
+
+  <h3>What happens if one (or more) of the lengths aren't input correctly and thus end up as NaN?</h3>
+  <p>Prediction: Get a non vaild triangle error</p>
+
+  <h3>What happens if one of the lengths of the triangle is 0? Two of the lengths? All three lengths?</h3>
+  <p>Prediction: Get a non vaild triangle error</p>
+
+  <h3>What happens if the user inputs one or more negative integers for the lengths of the triangle's legs?</h3>
+  <p>Prediction: Get a non vaild triangle error</p> 
 
   <!-- Answer the 3 questions above here -->
 </body>
