Atomic 2 complete, I believe.

--- a/02_OutputWithAlertAndLog/index.html
+++ b/02_OutputWithAlertAndLog/index.html
@@ -9,14 +9,14 @@
   <h1>JS Atomic 02</h1>
 
   <h2>What's the difference between alert() and console.log()?</h2>
-  <p>Put your answer here, then keep going</p>
+  <p>An 'alert()' opens a prompt box with which the user can interact where 'console.log()' prints lines directly to the console, where the user can't see. I found my 'console.log()' answers (and where they could be found locally) in Chrome by going to View >> Developer >> JavaScript Console. I imagine this is used for developers to leave notes for themself or other developers.</p>
 
   <h2>What's one situation where you might use an `alert()` to tell the user something?</h2>
-  <p>Put your answer here, then keep going</p>
-  <p>Maybe you'll have a couple paragraphs for an answer?</p>
+  <p>One situation in which I might make use of an 'alert()' would be if a user attempted to leave a page in the middle of filling out a form without submitting it.</p>
+  <p>The prompt appearing in the 'alert()' might read something like this: "You haven't yet finished this form. Are you sure you want to leave this page?"</p>
 
   <h2>What's one way that `alert()` might get obnoxious?</h2>
-  <p>Put your answer here, then keep going</p>
+  <p>An 'alert()' could get obnoxious if overused or used in an unwarranted situation. It feels a bit jarring as a user if unexpected and could create a negative relationship between the user and the site if not implemented wisely.</p>
 
   <!-- etc. -->
 </body>
