trying to figure out js version of .nil? will take a break and figure it out

--- a/06_IfStatements/6cindex.html
+++ b/06_IfStatements/6cindex.html
@@ -1,7 +1,7 @@
 <!doctype HTML>
 <html>
 <head>
-  <title>JS Atomic 06.A</title>
+  <title>JS Atomic 06.C</title>
   <script src="6cglobal.js"></script>
 </head>
 <body>
