Bottles of beer

--- a/07_BasicLoops/index.html
+++ b/07_BasicLoops/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>JS Atomic 03</title>
-  <script type="text/javascript" src="counting.js"></script>
+  <script type="text/javascript" src="beer.js"></script>
 </head>
 <body>
   <h1>JS Atomic 07</h1>
