--- a/06_IfStatements/indexC.html
+++ b/06_IfStatements/indexC.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>JS Atomic 06-C</title>
-  <script type="text/javascript" src="global.js"></script>
+  <script type="text/javascript" src="globalC.js"></script>
 </head>
 <body>
   <h1>JS Atomic 06-C</h1>
