--- a/06_IfStatements/indexD.html
+++ b/06_IfStatements/indexD.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>JS Atomic 06-D</title>
-  <script type="text/javascript" src="global.js"></script>
+  <script type="text/javascript" src="globalD.js"></script>
 </head>
 <body>
   <h1>JS Atomic 06-D</h1>
