--- a/06_IfStatements/indexE.html
+++ b/06_IfStatements/indexE.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>JS Atomic 06-E</title>
-  <script type="text/javascript" src="global.js"></script>
+  <script type="text/javascript" src="globalE.js"></script>
 </head>
 <body>
   <h1>JS Atomic 06-E</h1>
