--- a/06_IfStatements/indexB.html
+++ b/06_IfStatements/indexB.html
@@ -2,19 +2,19 @@
 <html>
 <head>
   <title>JS Atomic 06-B</title>
-  <script type="text/javascript" src="global.js"></script>
+  <script type="text/javascript" src="globalB.js"></script>
 </head>
 <body>
   <h1>JS Atomic 06-B</h1>
 
   <h2>Does it matter if the user-provided password matches your password exactly, or is there some flexibility allowed in capitalization?</h2>
-  <p> </p>
+  <p>Yes, it matters. Capitalization has to match correctly.</p>
 
   <h2>Did you use = or == or === to compare passwords (or something else)? Why? Would any of the others work?</h2>
-  <p> </p>
+  <p>I used ===. I didn't want anything freaky to happen. I know that === like, <i>really</i> makes sure something is equivalent, where == allows a string "2" to come across as equal to an integer 2. Not very accurate. Pretty sure I won't be using == very much.</p>
 
   <h2>Why is it a bad idea to store a password (or other sensitive information) in plain text in a Javascript file?</h2>
-  <p> </p>
+  <p>I'm pretty sure someone could do "view source" and see that password as plain text. That would need to be stored (encrypted) in a server. But I don't know much about all that...</p>
 
 </body>
 </html>
