--- a/06_IfStatements/indexF.html
+++ b/06_IfStatements/indexF.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>JS Atomic 06-F</title>
-  <script type="text/javascript" src="global.js"></script>
+  <script type="text/javascript" src="globalF.js"></script>
 </head>
 <body>
   <h1>JS Atomic 06-F</h1>
