--- a/06_IfStatements/6F_Triangles/index.html
+++ b/06_IfStatements/6F_Triangles/index.html
@@ -26,6 +26,18 @@
     <strong>Expected:</strong> I'm assuming that if one of the numbers equals 0 the conditional statments will still evaluate as <code>true</code> and it will consider the triangle valid. I believe this will also occur if all three lengths are zero, however, in the event that only 2 lengths are zero I postulate that it will return that the triangle is invalid. 
   </p>
 
+  <p>
+    <strong>Observed:</strong> I was incorrect. Each of the zero situations produced an invalid triangle since there was always at least one conditional that failed.
+  </p>
+
+  <h2>
+    What happens if the user inputs one or more negative integers for the lengths of the triangle's legs?
+  </h2>
+
+  <p>
+    <strong>Expected:</strong>I believe that the math will successfully evaluate, however, I don't think there will be any time when the triangle will be deemed valid since there will always be at least one <code>false</code> statment.
+  </p>
+
   <!-- Answer the questions above here -->
 </body>
 </html>
