--- a/06_IfStatements/6F_Triangles/index.html
+++ b/06_IfStatements/6F_Triangles/index.html
@@ -38,6 +38,9 @@
     <strong>Expected:</strong>I believe that the math will successfully evaluate, however, I don't think there will be any time when the triangle will be deemed valid since there will always be at least one <code>false</code> statment.
   </p>
 
+  <p>
+    <strong>Observed:</strong>My assumption was correct. 
+  </p>
   <!-- Answer the questions above here -->
 </body>
 </html>
