--- a/07_BasicLoops/index.html
+++ b/07_BasicLoops/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>JS Atomic 05</title>
   <script src="counting.js"></script>
+  <!-- <script src="fizzbuzz.js"></script> -->
 </head>
 <body>
   <h1>JS Atomic 07 - Basic Math</h1> 
