--- a/06_IfStatements/6F_Triangles/index.html
+++ b/06_IfStatements/6F_Triangles/index.html
@@ -41,6 +41,14 @@
   <p>
     <strong>Observed:</strong>My assumption was correct. 
   </p>
+
+  <h2>
+    Assuming errors exist, note that all of these errors come from the user inputting one or more invalid values. What are some strategies you might use to prevent this from happening (or at least to prevent those invalid values from being used)?
+  </h2>
+
+  <p>
+    It would be at this point I would try to implement some type of input validation. In most cases this can be handled with a simple <code>if</code> statement the excludes values you don't want to test. You would encapsulate each <code>prompt()</code> in a similar conditional thus only running that line of code once the condition is met. 
+  </p>
   <!-- Answer the questions above here -->
 </body>
 </html>
